[#11] feat: 셀 클릭하면 해당 아이디를 detailViewController에 보내주고 해당 뷰컨트롤러를 보여줌

--- a/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
+++ b/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
@@ -344,6 +344,21 @@
             </objects>
             <point key="canvasLocation" x="2365.5999999999999" y="125.61576354679804"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="ICD-Kh-mga">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="zP7-pS-LQX" customClass="DetailViewController" customModule="SideDish" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9w0-Ty-qEz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="NfB-2d-qEb"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RnT-XR-7sI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3092" y="126"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="eCI-H7-iIn">
             <objects>
