--- a/FE/src/components/DetailPage/DetailPage.css
+++ b/FE/src/components/DetailPage/DetailPage.css
@@ -10,9 +10,11 @@ li {
 }
 
 .detail-page {
-  width: 50%;
+  left: 500px;
+  width: 40%;
   height: 90vh;
   padding: 1rem;
+  background-color: #ffffff;
   border: 1px solid black;
 }
 
@@ -60,7 +62,7 @@ li {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  height: 50%;
+  height: 60%;
 }
 
 .shipment-contents {
@@ -85,7 +87,7 @@ li {
 
 .shipment-type li,
 .shipment-data li {
-  height: 25%;
+  min-height: 15%;
   font-size: 0.8rem;
 }
 
@@ -111,9 +113,11 @@ li {
 .counts-input input {
   width: 30%;
 }
+
 .total-price {
   text-align: right;
 }
+
 .total-price-label {
   font-size: 1.2rem;
   margin-right: 0.5rem;
@@ -124,4 +128,13 @@ li {
   font-size: 2rem;
   font-weight: 900;
   display: inline-block;
+}
+
+.add-button {
+  height: 10%;
+}
+
+.lower-page {
+  font-weight: 900;
+  font-size: 1.1rem;
 }
