[#14] style: 상세 페이지 컴포넌트 이미지 스타일 작업
why: 미니 캐러셀과 상세 페이지 주요(메인) 이미지가 화면 줄어듦에
반응하지 못하여, 기존의 img 태그에서 div의 background-image를 활용하는
방식으로 교체했다.

--- a/FE/src/components/DetailPage/MiniCarousel/MiniCarousel.css
+++ b/FE/src/components/DetailPage/MiniCarousel/MiniCarousel.css
@@ -1,6 +1,10 @@
-.mini-panels img {
-  width: 100%;
+.panel-img {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   height: 100%;
+  width: 100%;
+  cursor: pointer;
 }
 
 .mini-stage {
@@ -21,8 +25,8 @@
 
 .mini-panels {
   position: absolute;
-  width: 200px;
-  height: 200px;
+  width: 50%;
+  height: 50%;
   transform-style: preserve-3d;
   transition: 1s;
 }
