--- a/FE/src/components/DetailPage/DetailPage.css
+++ b/FE/src/components/DetailPage/DetailPage.css
@@ -12,7 +12,7 @@ li {
 .detail-page {
   left: 500px;
   width: 40%;
-  height: 90vh;
+  height: 80vh;
   padding: 1rem;
   background-color: #ffffff;
   border: 1px solid black;
@@ -27,6 +27,9 @@ li {
 
 .banchan-picture {
   width: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   margin-right: 0.5rem;
 }
 
