--- a/FE/src/components/DetailPage/DetailPage.css
+++ b/FE/src/components/DetailPage/DetailPage.css
@@ -1,5 +1,4 @@
-div,
-span {
+div {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -12,7 +11,7 @@ li {
 .detail-page {
   left: 500px;
   width: 40%;
-  height: 80vh;
+  height: 85vh;
   padding: 1rem;
   background-color: #ffffff;
   border: 1px solid black;
@@ -47,14 +46,14 @@ li {
   border-bottom: 1px solid #000000;
 }
 
-.explanation-title {
-  font-size: 2rem;
-  display: flex;
-  justify-content: space-between;
+.close-button {
+  cursor: pointer;
 }
 
-.explanation-title span {
-  display: block;
+.explanation-title {
+  font-size: 1.3rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .explanation-memo {
@@ -97,7 +96,7 @@ li {
 .explanation-price {
   text-align: right;
   font-weight: 900;
-  font-size: 2rem;
+  font-size: 1.7rem;
 }
 
 .shipment-count {
@@ -122,13 +121,13 @@ li {
 }
 
 .total-price-label {
-  font-size: 1.2rem;
+  font-size: 1rem;
   margin-right: 0.5rem;
   display: inline-block;
 }
 
 .total-price-data {
-  font-size: 2rem;
+  font-size: 1.7rem;
   font-weight: 900;
   display: inline-block;
 }
