[#14] feat: 캐러셀 컴포넌트 서버에서 오는 데이터로 교체
why: 캐러셀 컴포넌트에 기존의 mock 데이터를 대신하여, 진짜 서버에서 오는
데이터로 교체했다. 서버에서 보내주기로 약속하는 데이터에 맞춰, UI 작업
및 props 교체 작업을 진행했다.

--- a/FE/src/components/Carousel/Carousel.css
+++ b/FE/src/components/Carousel/Carousel.css
@@ -1,12 +1,10 @@
-div,
-span {
+div {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
 .stage {
-  background: powderblue;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -18,11 +16,21 @@ span {
 
 .carousel {
   position: relative;
-  width: 150px;
-  height: 150px;
+  width: 170px;
+  height: 170px;
   transform-style: preserve-3d;
-  animation: bingle 10s infinite linear;
+  animation: bingle 13s infinite linear;
   animation-play-state: running;
+}
+
+.carousel-title {
+  text-align: center;
+  transform: translateY(-100px);
+  width: 200px;
+}
+
+.carousel-title-main {
+  font-weight: 600;
 }
 
 .carousel:hover {
