--- a/FE/src/components/Carousel/Panel/Profile/Profile.css
+++ b/FE/src/components/Carousel/Panel/Profile/Profile.css
@@ -1,11 +1,35 @@
 .profile {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: flex-start;
   height: 100%;
 }
 
-.profile span {
-  font-size: 0.1rem;
-  display: block;
+.profile-title {
+  font-weight: 900;
+  font-size: 0.8rem;
+}
+
+.profile-description {
+  font-size: 0.6rem;
+}
+
+.profile-prices p {
+  display: inline-block;
+}
+
+.profile-n_price {
+  text-decoration: line-through;
+  font-size: 0.7rem;
+}
+
+.profile-s_price {
+  color: #43c8c4;
+}
+
+.profile-badges {
+  background-color: #ac78c0;
+  color: #fff;
+  font-size: 0.7rem;
 }
