--- a/FE/src/components/Carousel/Panel/Panel.css
+++ b/FE/src/components/Carousel/Panel/Panel.css
@@ -1,6 +1,6 @@
 .panel-side img {
-  width: 150px;
-  height: 150px;
+  width: 170px;
+  height: 170px;
 }
 
 .panel {
@@ -10,8 +10,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 150px;
-  height: 150px;
+  width: 170px;
+  height: 170px;
   background: rgba(255, 255, 255, 0.5);
   border: 0.2px solid #000000;
   cursor: pointer;
@@ -25,8 +25,8 @@
 }
 
 .panel-front {
-  background-color: #908f90;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
 }
 
 .panel-back {
@@ -40,4 +40,9 @@
 
 .panel-show {
   transform: rotateY(0deg);
+}
+
+.panel-img {
+  width: 100%;
+  height: 100%;
 }
