--- a/FE/src/components/Carousel/Carousel.css
+++ b/FE/src/components/Carousel/Carousel.css
@@ -5,13 +5,14 @@ div {
 }
 
 .stage {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   perspective: 1500px;
   perspective-origin: 10% 20% 70%;
+  margin-top: 200px;
 }
 
 .carousel {
