--- a/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
+++ b/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zP7-pS-LQX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4Oz-7T-9hJ">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -353,28 +353,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qMz-eu-sCJ" userLabel="Vertical Scroll View">
-                                <rect key="frame" x="0.0" y="44" width="375" height="660.66666666666674"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="660.66666666666663"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="oHd-zl-Tmv" userLabel="Content Stack View">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1702.3333333333333"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="502.33333333333331"/>
                                         <subviews>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pEl-4t-h4D" userLabel="Horizontal Scroll View">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="264.33333333333331"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ZVb-d1-dud">
-                                                        <rect key="frame" x="0.0" y="0.0" width="1125" height="264.33333333333331"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="264.33333333333331"/>
                                                         <subviews>
-                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FVe-LJ-ivg">
+                                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FVe-LJ-ivg">
                                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="264.33333333333331"/>
                                                                 <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                            </view>
-                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4ZN-j4-dEZ">
-                                                                <rect key="frame" x="375" y="0.0" width="375" height="264.33333333333331"/>
-                                                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                            </view>
-                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ja-qA-Xqs">
-                                                                <rect key="frame" x="750" y="0.0" width="375" height="264.33333333333331"/>
-                                                                <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             </view>
                                                         </subviews>
                                                     </stackView>
@@ -520,42 +512,18 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Wrf-Me-EJX" userLabel="Image Stack View">
-                                                <rect key="frame" x="0.0" y="502.33333333333348" width="375" height="1200"/>
+                                                <rect key="frame" x="0.0" y="502.33333333333337" width="375" height="0.0"/>
                                                 <subviews>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="faR-Jc-ShR" userLabel="이">
+                                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="faR-Jc-ShR" userLabel="이">
                                                         <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
                                                         <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="300" id="ogO-0B-kUe"/>
                                                         </constraints>
                                                     </view>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l4A-9G-vKo" userLabel="이">
-                                                        <rect key="frame" x="0.0" y="300" width="375" height="300"/>
-                                                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="300" id="YFL-Of-4fq"/>
-                                                        </constraints>
-                                                    </view>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="evf-we-rNd" userLabel="이">
-                                                        <rect key="frame" x="0.0" y="599.99999999999989" width="375" height="300"/>
-                                                        <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="300" id="6TF-uX-n6R"/>
-                                                        </constraints>
-                                                    </view>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LK6-gn-9ez" userLabel="이">
-                                                        <rect key="frame" x="0.0" y="900" width="375" height="300"/>
-                                                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="300" id="8LT-pE-xgy"/>
-                                                        </constraints>
-                                                    </view>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstItem="LK6-gn-9ez" firstAttribute="width" secondItem="evf-we-rNd" secondAttribute="width" id="1Ov-ym-dZS"/>
                                                     <constraint firstItem="faR-Jc-ShR" firstAttribute="width" secondItem="Wrf-Me-EJX" secondAttribute="width" id="4hF-bw-Mkx"/>
-                                                    <constraint firstItem="l4A-9G-vKo" firstAttribute="width" secondItem="faR-Jc-ShR" secondAttribute="width" id="paI-MY-iRw"/>
-                                                    <constraint firstItem="evf-we-rNd" firstAttribute="width" secondItem="l4A-9G-vKo" secondAttribute="width" id="ySF-R2-3jx"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
