--- a/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
+++ b/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
@@ -343,7 +343,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n8N-sQ-S2A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2105" y="126"/>
+            <point key="canvasLocation" x="1990" y="115"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="ICD-Kh-mga">
@@ -357,13 +357,13 @@
                                 <rect key="frame" x="0.0" y="44" width="375" height="660.66666666666663"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="oHd-zl-Tmv" userLabel="Content Stack View">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="502.33333333333331"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="568.33333333333337"/>
                                         <subviews>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pEl-4t-h4D" userLabel="Horizontal Scroll View">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="264.33333333333331"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="330.33333333333331"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ZVb-d1-dud">
-                                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="264.33333333333331"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="330.33333333333331"/>
                                                         <subviews>
                                                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FVe-LJ-ivg">
                                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="264.33333333333331"/>
@@ -384,7 +384,7 @@
                                                 <viewLayoutGuide key="frameLayoutGuide" id="73M-un-vdE"/>
                                             </scrollView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="J91-gK-g6H" userLabel="Title Stack View">
-                                                <rect key="frame" x="18.666666666666657" y="274.33333333333331" width="337.66666666666674" height="52.666666666666686"/>
+                                                <rect key="frame" x="18.666666666666657" y="340.33333333333331" width="337.66666666666674" height="52.666666666666686"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[모이세] 육개장 1팩(600g)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4fG-oy-fpg" userLabel="Title Label">
                                                         <rect key="frame" x="0.0" y="0.0" width="337.66666666666669" height="28"/>
@@ -401,17 +401,17 @@
                                                 </subviews>
                                             </stackView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GzZ-zz-gCi" userLabel="DivisionView">
-                                                <rect key="frame" x="9.3333333333333428" y="337" width="356.33333333333326" height="3"/>
+                                                <rect key="frame" x="9.3333333333333428" y="403" width="356.33333333333326" height="3"/>
                                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="3" id="KAf-qZ-pdK"/>
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="le8-v4-LtK" userLabel="Info Stack View">
-                                                <rect key="frame" x="18.666666666666657" y="350" width="337.66666666666674" height="105.66666666666669"/>
+                                                <rect key="frame" x="18.666666666666657" y="416" width="337.66666666666674" height="106"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="4pk-3C-dO0">
-                                                        <rect key="frame" x="0.0" y="0.0" width="67.666666666666671" height="105.66666666666667"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="67.666666666666671" height="106"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="가격" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DNG-bo-bmG">
                                                                 <rect key="frame" x="0.0" y="0.0" width="67.666666666666671" height="26.666666666666668"/>
@@ -432,7 +432,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="배송정보" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tue-fG-Jdq">
-                                                                <rect key="frame" x="0.0" y="79.333333333333314" width="67.666666666666671" height="26.333333333333329"/>
+                                                                <rect key="frame" x="0.0" y="79.333333333333371" width="67.666666666666671" height="26.666666666666671"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -440,7 +440,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="smY-vQ-tx3">
-                                                        <rect key="frame" x="67.666666666666657" y="0.0" width="270" height="105.66666666666667"/>
+                                                        <rect key="frame" x="67.666666666666657" y="0.0" width="270" height="106"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YsN-8l-hhp">
                                                                 <rect key="frame" x="0.0" y="0.0" width="270" height="26.666666666666668"/>
@@ -482,7 +482,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울 경기 새벽배송 / 전국 택배 (제주 및 도서산간 불가)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WGL-Dv-Hji">
-                                                                <rect key="frame" x="0.0" y="79.333333333333314" width="270" height="26.333333333333329"/>
+                                                                <rect key="frame" x="0.0" y="79.333333333333371" width="270" height="26.666666666666671"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
@@ -495,16 +495,16 @@
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aMr-gK-kAh" userLabel="Pre Stack View">
-                                                <rect key="frame" x="0.0" y="465.66666666666669" width="375" height="26.666666666666686"/>
+                                                <rect key="frame" x="0.0" y="532" width="375" height="26.333333333333371"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이만큼 배송됩니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8m-qF-7RO">
-                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="25.666666666666668"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="25.333333333333332"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rMi-v9-cX1">
-                                                        <rect key="frame" x="0.0" y="25.666666666666686" width="375" height="1"/>
+                                                        <rect key="frame" x="0.0" y="25.333333333333371" width="375" height="1"/>
                                                         <color key="backgroundColor" name="divisionColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="1" id="YSt-Pp-IEt"/>
@@ -513,7 +513,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Wrf-Me-EJX" userLabel="Image Stack View">
-                                                <rect key="frame" x="0.0" y="502.33333333333337" width="375" height="0.0"/>
+                                                <rect key="frame" x="0.0" y="568.33333333333337" width="375" height="0.0"/>
                                                 <subviews>
                                                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="faR-Jc-ShR" userLabel="이">
                                                         <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
@@ -542,7 +542,7 @@
                                     <constraint firstItem="Wrf-Me-EJX" firstAttribute="width" secondItem="ivL-gb-VLH" secondAttribute="width" id="NF2-St-gk9"/>
                                     <constraint firstItem="GzZ-zz-gCi" firstAttribute="width" secondItem="ivL-gb-VLH" secondAttribute="width" multiplier="0.95" id="UCn-pL-JXP"/>
                                     <constraint firstItem="oHd-zl-Tmv" firstAttribute="leading" secondItem="WhL-ax-RIN" secondAttribute="leading" id="X3K-Vv-8kP"/>
-                                    <constraint firstItem="pEl-4t-h4D" firstAttribute="height" secondItem="ivL-gb-VLH" secondAttribute="height" multiplier="0.4" id="cLC-V0-cLb"/>
+                                    <constraint firstItem="pEl-4t-h4D" firstAttribute="height" secondItem="ivL-gb-VLH" secondAttribute="height" multiplier="0.5" id="cLC-V0-cLb"/>
                                     <constraint firstItem="J91-gK-g6H" firstAttribute="width" secondItem="ivL-gb-VLH" secondAttribute="width" multiplier="0.9" id="eDR-iO-6Y8"/>
                                     <constraint firstItem="oHd-zl-Tmv" firstAttribute="trailing" secondItem="WhL-ax-RIN" secondAttribute="trailing" id="gzg-ey-xtg"/>
                                     <constraint firstItem="pEl-4t-h4D" firstAttribute="width" secondItem="ivL-gb-VLH" secondAttribute="width" id="iDQ-aA-BPf"/>
@@ -574,10 +574,20 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NfB-2d-qEb"/>
                     </view>
+                    <connections>
+                        <outlet property="contentScrollView" destination="qMz-eu-sCJ" id="QWf-fj-1iP"/>
+                        <outlet property="deliveryFeeLabel" destination="WEb-tu-gWl" id="b9C-SF-N34"/>
+                        <outlet property="deliveryInfoLabel" destination="WGL-Dv-Hji" id="w5Y-G1-KVZ"/>
+                        <outlet property="descriptionLabel" destination="din-Ai-fRc" id="7In-Gi-3q7"/>
+                        <outlet property="detailImageStackView" destination="Wrf-Me-EJX" id="hvB-wC-WL3"/>
+                        <outlet property="mileageLabel" destination="GJx-wA-RDs" id="BpZ-iR-riq"/>
+                        <outlet property="thumbnailScrollView" destination="pEl-4t-h4D" id="l8V-QT-Qe5"/>
+                        <outlet property="thumbnailStackView" destination="ZVb-d1-dud" id="Zx5-iE-HxZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RnT-XR-7sI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2785" y="126"/>
+            <point key="canvasLocation" x="2778" y="115"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="eCI-H7-iIn">
