--- a/FE/src/components/Carousel/Carousel.css
+++ b/FE/src/components/Carousel/Carousel.css
@@ -17,25 +17,32 @@ div {
 
 .carousel {
   position: relative;
-  width: 170px;
-  height: 170px;
+  width: 230px;
+  height: 230px;
   transform-style: preserve-3d;
-  animation: bingle 13s infinite linear;
+  animation: bingle 25s infinite linear;
   animation-play-state: running;
 }
 
 .carousel-title {
   text-align: center;
   transform: translateY(-100px);
-  width: 200px;
+  width: 250px;
 }
 
 .carousel-title-main {
   font-weight: 600;
+  margin-left: 0.2rem;
 }
 
 .carousel:hover {
   animation-play-state: paused;
+}
+
+.hidden-title {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 900;
 }
 
 @keyframes bingle {
