--- a/FE/src/components/Carousel/Panel/Profile/Profile.css
+++ b/FE/src/components/Carousel/Panel/Profile/Profile.css
@@ -4,15 +4,16 @@
   justify-content: space-between;
   align-items: flex-start;
   height: 100%;
+  padding: 0.5rem;
 }
 
 .profile-title {
   font-weight: 900;
-  font-size: 0.8rem;
+  font-size: 1.2rem;
 }
 
 .profile-description {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
 }
 
 .profile-prices p {
@@ -21,15 +22,21 @@
 
 .profile-n_price {
   text-decoration: line-through;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
 }
 
 .profile-s_price {
   color: #43c8c4;
+  font-size: 1.2rem;
+}
+
+.profile-badge-section {
+  display: flex;
 }
 
 .profile-badges {
   background-color: #ac78c0;
   color: #fff;
-  font-size: 0.7rem;
+  margin-right: 0.3rem;
+  font-size: 1.2rem;
 }
