--- a/FE/src/components/Carousels/Carousels.css
+++ b/FE/src/components/Carousels/Carousels.css
@@ -1,8 +1,9 @@
 .carousels {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  margin-top: 100px;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
