--- a/FE/src/components/DetailPage/MiniCarousel/MiniCarousel.css
+++ b/FE/src/components/DetailPage/MiniCarousel/MiniCarousel.css
@@ -10,7 +10,9 @@
 .mini-stage {
   position: relative;
   perspective: 400px;
-  height: 400px;
+  min-height: 100px;
+  height: 500px;
+  max-height: 500px;
   width: 100%;
   display: flex;
   align-items: center;
