feat: 상세페이지 원가, 특가 반영

--- a/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
+++ b/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
@@ -561,6 +561,8 @@
                         <outlet property="descriptionLabel" destination="din-Ai-fRc" id="7In-Gi-3q7"/>
                         <outlet property="detailImageStackView" destination="Wrf-Me-EJX" id="hvB-wC-WL3"/>
                         <outlet property="mileageLabel" destination="GJx-wA-RDs" id="BpZ-iR-riq"/>
+                        <outlet property="originalPriceLabel" destination="8Ao-Yf-CIr" id="gqH-GT-xfF"/>
+                        <outlet property="specialPriceLabel" destination="fNg-Si-ZWN" id="yvw-l9-Neq"/>
                         <outlet property="thumbnailScrollView" destination="pEl-4t-h4D" id="l8V-QT-Qe5"/>
                         <outlet property="thumbnailStackView" destination="ZVb-d1-dud" id="Zx5-iE-HxZ"/>
                         <outlet property="titleLabel" destination="4fG-oy-fpg" id="C25-W7-ZDL"/>
